--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
 	<link href="style.css" rel="stylesheet">
+	<link href='https://fonts.googleapis.com/css?family=Fjalla+One' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -18,30 +19,32 @@
 		<header class="header">
 
 			<div class="logo">
-				<p>Site name<p><nav><a href="index.html">Home</a> | <a href="#ab">About</a> | <a href="#wo">Work</a> | <a href="#co">Contact</a></nav>
+				<table>
+					<tr>
+						<td class="tdf">Site name</td><td class="tds"><nav><a href="index.html" style="padding-right: 5px; padding-left: 5px">Home</a><a href="#ab" style="padding-right: 5px; padding-left: 5px">About</a><a href="#contentomore" style="padding-right: 5px; padding-left: 5px">Work</a><a href="#co" style="padding-right: 5px; padding-left: 5px">Contact</a></nav></td>
+					</tr>
+				</table>
 			</div>
-			
-			
-			
+		
 		</header><!-- .header-->
 			
 		
-		
-
 		<section class="bannertxt">
-			<h1>Cras ornare trist lorem ipsum</h1>
-			<h2>cusce pellentesque susc</h2>
-			<a href="#contentomore" class="button1">READ ME</a> 
+			<h1>CRAS ORNARE SRIST LOREM IPSUM</h1>
+			<h2>CURSE PELLENTESQUE SUSC</h2>
+			<a href="#contentomore" class="button1">READ MORE</a> 
 		</section>
 			
 		<main class="content">
-			
+			<a id="ab"></a>
 			<section class="contof4">
 				<div class="cont1">
-					<h3>Vestibulum auctor</h3>
-					<p>Praesent dapibus, neque id cursus faucibus, 
-						tortor neque egestas augue, eu vulputate magna eros eu erat.
-						Aliquam erat volutpat</p>
+					<div class="ctxt1">
+						<h3>Vestibulum auctor</h3>
+						<p>Praesent dapibus, neque id cursus faucibus, 
+							tortor neque egestas augue, eu vulputate magna eros eu erat.
+							Aliquam erat volutpat</p>
+					</div>
 				</div>
 					
 				<div class="cont2">
@@ -98,6 +101,8 @@
 						<img src="img/content3/mail.jpg" alt="not found" class="imail" align="center">
 			</section>
 			
+			
+			<a id="co"></a>
 			<section class="conthr">
 				<h1>connnect with us</h1>
 				<hr width="121px", color="steelblue"><p>Vivamus vestibulum nulla nec ante</p><hr width="121px", color="steelblue">
