--- a/index.html
+++ b/index.html
@@ -18,14 +18,18 @@
 	<div class="wrapper">
 			
 		<header class="header">
-
-			<div class="logo">
-				<table>
-					<tr>
-						<td class="tdf">Site name</td><td class="tds"><nav><a href="index.html" style="padding-right: 5px; padding-left: 5px">Home</a><a href="#ab" style="padding-right: 5px; padding-left: 5px">About</a><a href="#contentomore" style="padding-right: 5px; padding-left: 5px">Work</a><a href="#co" style="padding-right: 5px; padding-left: 5px">Contact</a></nav></td>
-					</tr>
-				</table>
-			</div>
+			
+			<section class="logo">
+				Site name
+			</section>
+			
+			<section class="navigation">
+				<a class="a1" href="index.html">Home</a>
+				<a class="a2" href="#ab">About</a>
+				<a class="a3" href="#contentomore">Work</a>
+				<a class="a4" href="#co">Contact</a>
+			</section>
+			
 		
 		</header><!-- .header-->
 			
