--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<meta name="description" content="" />
 	<link href="style.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+	<link rel="shortcut icon" href="img/favicon.ico" type="image/vnd.microsoft.icon">
 
 </head>
 
@@ -145,13 +146,13 @@
 	
 	<footer class="footer">
 		<div class="foot1">
-			<p>info@sitename.com <i class="fa fa-facebook"></i> <i class="fa fa-twitter"></i> (000) 777 777 7777</p>
+			<p>info@sitename.com <a class="cmon1" href="https://www.facebook.com/TheFilthyFrank/?fref=nf" target="_blank"><i class="fa fa-facebook"></i></a> <a class="cmon1" href="https://twitter.com/gufovicky" target="_blank"><i class="fa fa-twitter"></i></a> (000) 777 777 7777</p>
 		</div>
 		
 		<hr width="283px", color="#397d8a">
 		
 		<div class="foot2">
-			<p>Copyright(c) website name. <spam class="damn">Designed by: <a class="cmon" href="http://www.alltemplateneeds.com">www.alltemplateneeds.com</a></spam>  /  Images from: <a class="cmon1" href="http://www.wallpaperswide.com">www.wallpaperswide.com</a>, <a class="cmon1" href="http://www.photorack.net">www.photorack.net</a></p>
+			<p>Copyright(c) website name. <spam class="damn">Designed by: <a class="cmon" href="http://www.alltemplateneeds.com" target="_blank">www.alltemplateneeds.com</a></spam>  /  Images from: <a class="cmon1" href="http://www.wallpaperswide.com" target="_blank">www.wallpaperswide.com</a>, <a class="cmon1" href="http://www.photorack.net" target="_blank">www.photorack.net</a></p>
 		</div>
 	</footer><!-- .footer -->
 	
