--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 			
 		
 		<section class="bannertxt">
-			<p class="ss1">CRAS ORNARE SRIST LOREM IPSUM</p>
-			<p class="ss2">CURSE PELLENTESQUE SUSC</p>
+			<p class="ss1">CRAS ORNARE TRIST LOREM IPSUM</p>
+			<p class="ss2">CUSCE PELLENTESQUE SUSC</p>
 			<a href="#contentomore" class="button1">READ MORE</a> 
 		</section>
 			
