--- a/index.html
+++ b/index.html
@@ -10,29 +10,30 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/vnd.microsoft.icon">
 
+
 </head>
 
 <body>
 
-<div class="banner">
+<!--<div class="banner">-->
 	
 	<div class="wrapper">
+		
+			<header class="header">
 			
-		<header class="header">
+				<section class="logo">
+					Site name
+				</section>
 			
-			<section class="logo">
-				Site name
-			</section>
-			
-			<section class="navigation">
-				<a class="a1" href="index.html">Home</a>
-				<a class="a2" href="#ab">About</a>
-				<a class="a3" href="#contentomore">Work</a>
-				<a class="a4" href="#co">Contact</a>
-			</section>
+				<section class="navigation">
+					<a class="a1" href="index.html">Home</a>
+					<a class="a2" href="#ab">About</a>
+					<a class="a3" href="#contentomore">Work</a>
+					<a class="a4" href="#co">Contact</a>
+				</section>
 			
 		
-		</header><!-- .header-->
+			</header><!-- .header-->
 			
 		
 		<section class="bannertxt">
@@ -156,6 +157,6 @@
 		</div>
 	</footer><!-- .footer -->
 	
-</div>	
+<!--</div>-->
 </body>
 </html>
