--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
 </head>
 
 <body>
-
-<!--<div class="banner">-->
 	
 	<div class="wrapper">
+		
+		<!--<div class="banner">
+			<img src="img/banner.jpg">
+		</div>-->
 		
 			<header class="header">
 			
@@ -157,6 +159,5 @@
 		</div>
 	</footer><!-- .footer -->
 	
-<!--</div>-->
 </body>
 </html>
