--- a/index.html
+++ b/index.html
@@ -9,20 +9,16 @@
 	<link href="style.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/vnd.microsoft.icon">
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
 
-<body>
-<<<<<<< HEAD
+<body data-spy="scroll" data-target="#navbar">
 
 
-=======
-	
->>>>>>> origin/links-changed
 	<div class="wrapper">
 		
-		<!--<div class="banner">
-			<img src="img/banner.jpg">
-		</div>-->
 		
 			<header class="header">
 			
@@ -30,12 +26,14 @@
 					Site name
 				</section>
 			
-				<section class="navigation">
-					<a class="a1" href="index.html">Home</a>
-					<a class="a2" href="#ab">About</a>
-					<a class="a3" href="#contentomore">Work</a>
-					<a class="a4" href="#co">Contact</a>
-				</section>
+				<nav id="navigation">
+					<ul class="nav">
+						<li><a class="a1" href="index.html">Home</a></li>
+						<li><a class="a2" href="#ab">About</a></li>
+						<li><a class="a3" href="#contentomore">Work</a></li>
+						<li><a class="a4" href="#co">Contact</a></li>
+					</ul>
+				</nav>
 			
 		
 			</header><!-- .header-->
