--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
 
-<body data-spy="scroll" data-target="#navbar">
-
-
+<body data-spy="scroll" data-target="#navigation" data-offset="50">
+	<a id="ind"> </a>
 	<div class="wrapper">
 		
 		
@@ -28,10 +27,10 @@
 			
 				<nav id="navigation">
 					<ul class="nav">
-						<li><a class="a1" href="index.html">Home</a></li>
-						<li><a class="a2" href="#ab">About</a></li>
-						<li><a class="a3" href="#contentomore">Work</a></li>
-						<li><a class="a4" href="#co">Contact</a></li>
+						<li><a href="#ind">Home</a></li>
+						<li><a href="#ab">About</a></li>
+						<li><a href="#contentomore">Work</a></li>
+						<li><a href="#co">Contact</a></li>
 					</ul>
 				</nav>
 			
@@ -45,7 +44,7 @@
 			<a href="#contentomore" class="button1">READ MORE</a> 
 		</section>
 			
-		<a id="ab"></a>
+		<a id="ab"> </a>
 		<main class="content">
 			
 			<section class="contof4">
@@ -134,7 +133,7 @@
 				
 			<a id="co"></a>
 			<section class="sublet">
-				<form action="/form controller" method="post">
+				<form action="form controller" method="post">
 				<input type="text" value="" placeholder="Enter Full Name" tabindex="1" class="txt1"/>
 				<input type="email" value="" placeholder="Enter Email" required="true" tabindex="2" class="txt2"/>
 				<textarea name="txtarea" tabindex="3" placeholder="Enter Your Message"></textarea>
@@ -153,7 +152,7 @@
 			<p>info@sitename.com <a class="cmon1" href="https://www.facebook.com/TheFilthyFrank/?fref=nf" target="_blank"><i class="fa fa-facebook"></i></a> <a class="cmon1" href="https://twitter.com/gufovicky" target="_blank"><i class="fa fa-twitter"></i></a> (000) 777 777 7777</p>
 		</div>
 		
-		<hr width="283px", color="#397d8a">
+		<hr class="last">
 		
 		<div class="foot2">
 			<p>Copyright(c) website name. <spam class="damn">Designed by: <a class="cmon" href="http://www.alltemplateneeds.com" target="_blank">www.alltemplateneeds.com</a></spam>  /  Images from: <a class="cmon1" href="http://www.wallpaperswide.com" target="_blank">www.wallpaperswide.com</a>, <a class="cmon1" href="http://www.photorack.net" target="_blank">www.photorack.net</a></p>
