--- a/index.html
+++ b/index.html
@@ -12,6 +12,31 @@
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+	<script src="http://maps.googleapis.com/maps/api/js"></script>
+
+	<script>
+	var myCenter=new google.maps.LatLng(48,37.8);
+
+	function initialize(){
+		var mapProp = {
+		center:myCenter,
+		zoom:5,
+
+		mapTypeId:google.maps.MapTypeId.ROADMAP
+	};
+
+	var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
+
+	var marker=new google.maps.Marker({
+		position:myCenter,
+		icon: "img/ball.png"
+	});
+
+	marker.setMap(map);
+	}
+
+	google.maps.event.addDomListener(window, 'load', initialize);
+</script>
 </head>
 
 <body data-spy="scroll" data-target="#navigation" data-offset="50">
@@ -141,6 +166,8 @@
 						<input type="submit" value="SIUBMIT" class="submi">
 					</div>
 				</form>
+				
+			<div id="googleMap"></div>
 			
 			</section>
 			
