--- a/index.html
+++ b/index.html
@@ -6,37 +6,45 @@
 	<title>First Task</title>
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
-	<link href="style.css" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet">
+	<link rel="stylesheet" href="css/flexslider.css" type="text/css" media="screen">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/vnd.microsoft.icon">
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 	<script src="http://maps.googleapis.com/maps/api/js"></script>
+	<script src="js/jquery.flexslider-min.js"></script>
 
 	<script>
-	var myCenter=new google.maps.LatLng(48,37.8);
+		var myCenter = new google.maps.LatLng(48,37.8);
 
-	function initialize(){
-		var mapProp = {
-		center:myCenter,
-		zoom:5,
+		function initialize(){
+			var mapProp = {
+			center:myCenter,
+			zoom:5,
 
-		mapTypeId:google.maps.MapTypeId.ROADMAP
-	};
+			mapTypeId:google.maps.MapTypeId.ROADMAP
+		};
 
-	var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
+		var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
 
-	var marker=new google.maps.Marker({
-		position:myCenter,
-		icon: "img/ball.png"
-	});
+		var marker=new google.maps.Marker({
+			position:myCenter,
+			icon: "img/ball.png"
+		});
 
-	marker.setMap(map);
-	}
+		marker.setMap(map);
+		}
 
-	google.maps.event.addDomListener(window, 'load', initialize);
-</script>
+		google.maps.event.addDomListener(window, 'load', initialize);
+	</script>
+
+	<script type="text/javascript">
+        $(window).load(function () {
+            $('.flexslider').flexslider();
+        });
+    </script>
 </head>
 
 <body data-spy="scroll" data-target="#navigation" data-offset="50">
@@ -107,6 +115,35 @@
 					
 			</section>
 			
+			<section class="slider">
+				<div id="container">
+					<div class="flexslider">
+						<ul class="slides">
+							<li>
+								<img src="img/sliderfor/slide1.jpg" />
+								<p class="flex-caption">Wanna some shitty looking glasses?</p>
+							</li>
+							<li>
+								<img src="img/sliderfor/slide2.jpg" />
+								<p class="flex-caption">Then welcome to ower family!</p>
+							</li>
+							<li>
+								<img src="img/sliderfor/slide3.jpg" />
+								<p class="flex-caption">Family of douches.</p>
+							</li>
+							<li>
+								<img src="img/sliderfor/slide4.jpg" />
+								<p class="flex-caption">And hypocritical pussyies.</p>
+							</li>
+							<li>
+								<img src="img/sliderfor/slide5.jpg" />
+								<p class="flex-caption">Stay with us and be like we are!</p>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</section>
+			
 			<a id="contentomore"></a>
 			<section class="chr">
 				<p class="upper2">TEMPOR INTERDUM</p>
@@ -159,9 +196,9 @@
 			<a id="co"></a>
 			<section class="sublet">
 				<form action="form controller" method="post">
-				<input type="text" value="" placeholder="Enter Full Name" tabindex="1" class="txt1"/>
+				<input type="text" value="" placeholder="Enter Full Name" required="true" tabindex="1" class="txt1"/>
 				<input type="email" value="" placeholder="Enter Email" required="true" tabindex="2" class="txt2"/>
-				<textarea name="txtarea" tabindex="3" placeholder="Enter Your Message"></textarea>
+				<textarea name="txtarea" tabindex="3" required="true" placeholder="Enter Your Message"></textarea>
 					<div class="subm">
 						<input type="submit" value="SIUBMIT" class="submi">
 					</div>
