--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 							</li>
 							<li>
 								<img src="img/sliderfor/slide2.jpg" />
-								<p class="flex-caption">Then welcome to ower family!</p>
+								<p class="flex-caption">Then welcome to our family!</p>
 							</li>
 							<li>
 								<img src="img/sliderfor/slide3.jpg" />
